--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
       <!-- Chabot Footer -->
       <div class="chat-footer">
         <form action="#" class="chat-form">
-          <textarea placeholder="Message..." class="message-input" required></textarea>
+          <textarea
+            placeholder="Message..."
+            class="message-input"
+            required
+          ></textarea>
           <div class="chat-controls">
             <button type="button" class="material-symbols-rounded">
               sentiment_satisfied
@@ -61,7 +65,11 @@
             <button type="button" class="material-symbols-rounded">
               attach_file
             </button>
-            <button type="submit" id="send-message" class="material-symbols-rounded">
+            <button
+              type="submit"
+              id="send-message"
+              class="material-symbols-rounded"
+            >
               arrow_upward
             </button>
           </div>
