--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <title>Document</title>
+    <title>ChatBot</title>
   </head>
   <body>
     <div class="chatbot-popup">
@@ -47,9 +47,16 @@
             <button type="button" class="material-symbols-rounded">
               sentiment_satisfied
             </button>
-            <button type="button" class="material-symbols-rounded">
-              attach_file
-            </button>
+            <div class="file-upload-wrapper">
+              <input type="file" , accept="images/*" id="file-input" hidden />
+              <button
+                type="button"
+                id="file-upload"
+                class="material-symbols-rounded"
+              >
+                attach_file
+              </button>
+            </div>
             <button
               type="submit"
               id="send-message"
