--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </button>
             <div class="file-upload-wrapper">
               <input type="file" , accept="images/*" id="file-input" hidden />
+              <img src="#" />
               <button
                 type="button"
                 id="file-upload"
